--- a/head.html
+++ b/head.html
@@ -1,6 +1,22 @@
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <script src="https://universal-editor-service.adobe.io/cors.js" async></script>
-<link rel="stylesheet" href="/styles/styles.css"/>
-<link rel="stylesheet" href="/styles/common.css"/>
+<link rel="stylesheet" href="/styles/styles.css" />
+<link rel="stylesheet" href="/styles/common.css" />
+<script>
+    (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start': new Date().getTime(),
+            event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NBBJHXVS');
+</script>
